Refactor and reorganize Software Testing Handbook
Major changes:
- Renamed Module2.1-SECURE to Module2.1-IMPROVED to better reflect educational purpose
- Reorganized documentation structure with new docs/audits and docs/status directories
- Added new security improvements (HSTS filter, exception handler)
- Added Python static analysis fixed example
- Created scripts directory with run_scans.sh
- Updated README files and documentation for clarity
- Improved testing strategy and vulnerability analysis reports

This refactoring provides a clearer educational structure and more realistic security examples.